2008-12-04  wookay.noh at gmail.com
	* 키순서

2008-12-03  wookay.noh at gmail.com
	* 인자값
	* 역함수
	* 뭐임?

2008-12-02  wookay.noh at gmail.com
	* 규칙
	* 은|는|일때
	* 함수
	* 뭐?
	* 모르오