@@ -1,0 +1,9 @@
+# file.oo
+
+규칙은 rules/file.rb
+#디렉토리는 /Users/wookay/Library/Application Support/Developer/Shared/Xcode/Screenshots
+디렉토리는 .
+파일은 몇 개 있나?
+파일의 이름은 뭐?
+파일의 크기는 뭐?
+파일의 이름과 크기는 뭐?
