@@ -11,7 +11,9 @@ RULES_PRI="rules/.pri"
 KEYWORD_ARGUMENTS="인자값"
 KEYWORD_RULES="규칙"
 KEYWORD_WHAT="뭐|뭐임"
-KEYWORD_PALABRA="은|는|일때|을|를"
+KEYWORD_PALABRA="은|는|이|가|을|를|일때"
+KEYWORD_DE="의"
+KEYWORD_Y="와|과"
 KEYWORD_ORDER="키순서"
 KEYWORD_NO="모르오"
 KEYWORD_FUNCTION="함수"
