@@ -1,5 +1,0 @@
-규칙은 rules/file.rb
-
-디렉토리는 /Users/wookay/Library/Application Support/Developer/Shared/Xcode/Screenshots
-파일은 몇 개 있나?
-파일이름은 뭐뭐뭐?
