@@ -1,4 +1,9 @@
 2008-12-04  wookay.noh at gmail.com
+	* 의
+	* 와|과
+	* 이|가|을|를
+
+2008-12-04  wookay.noh at gmail.com
 	* 키순서
 
 2008-12-03  wookay.noh at gmail.com
